# nudoku

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  _config.yml  configure.ac  index.html  index.md  main.c  nudoku  nudoku.1  params.json  sudoku.c  sudoku.h  vector.c  vector.h
.github/workflows/: c-cpp.yml  linux.yml  macos.yml
man/: nudoku.1  nudoku.6
po/: LINGUAS  Makevars  POTFILES.in  de.po  es.po  fr.po  it.po  ja.po  ka.po  nudoku.pot  ru.po  tr.po  uk.po  vi.po
snap/: snapcraft.yaml
src/: .clang-format  .main.c.swp  Makefile  Makefile.am  Makefile.in  main.c  nudoku  outp.c  outp.h  sudoku.c  sudoku.h  types.h  utils.c  utils.h
